--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #151a1c;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +35,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  color: darkslategrey;
+}
+
+.logo {
+  font-size: 1.45rem !important; 
 }
